# sdl2-base-game

./: .gitignore  CMakeLists.txt  Makefile  Makefile-deprecated  README.md
include/headers/: game.h
src/: Bitmap.cpp  Bitmap.h  CMakeLists.txt  ResourceManager.cpp  ResourceManager.h  game.cpp  game.h  main.cpp  rocket.cpp  rocket.h
